# perceptron

./: CMakeLists.txt  Perceptron.cpp  Perceptron.h  RandomGenerator.h  main.cpp
